add cache and logAspect

--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 	}
 }
 
+
 apply plugin: 'java'
 //apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -19,6 +20,10 @@ apply plugin: 'io.spring.dependency-management'
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+
+test {
+	reports.html.enabled = true
+}
 
 repositories {
 	maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -33,7 +38,10 @@ ext {
 }
 
 dependencies {
-	compile group: 'tk.mybatis', name: 'mapper-spring-boot-starter', version: '2.0.4'
+	compile group: 'com.alibaba', name: 'fastjson', version: '1.2.51'
+	compile group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '3.0.0'
+	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
+    compile group: 'tk.mybatis', name: 'mapper-spring-boot-starter', version: '2.0.4'
 	compile group: 'com.google.guava', name: 'guava', version: '27.0-jre'
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation('org.springframework.boot:spring-boot-starter-amqp')
@@ -63,7 +71,9 @@ dependencies {
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	runtimeOnly('mysql:mysql-connector-java')
 	compileOnly('org.springframework.boot:spring-boot-configuration-processor')
-	compileOnly('org.projectlombok:lombok')
+	compile('org.projectlombok:lombok')
+	testCompile 'junit:junit:4.12'
+	testCompile 'org.mockito:mockito-core:2.7.19'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('io.projectreactor:reactor-test')
 	testImplementation('org.springframework.batch:spring-batch-test')
