--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.redis.host=localhost
 spring.redis.port=6379
+spring.redis.database=0
 
 # 日志配置，默认info不用配置
 logging.level.com.example.demo= debug
